--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <p>O desafio central não é apenas "evitar doenças", mas instrumentalizar os líderes para gerirem a pressão e a complexidade sem quebrarem (burnout) ou transferirem essa tensão para a equipe.</p>
                 <ul>
                     <li><strong>Público-Alvo:</strong> Aproximadamente 120 líderes (Superintendentes a Supervisores).</li>
-                    <li><strong>Dor Principal:</strong> Necessidade de identificar riscos psicossiais e atuar preventivamente.</li>
+                    <li><strong>Dor Principal:</strong> Necessidade de identificar riscos psicossociais e atuar preventivamente.</li>
                     <li><strong>Objetivo Final:</strong> Redução de absenteísmo, melhoria do clima e liderança humanizada.</li>
                 </ul>
             </div>
