--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         header {
             background-color: var(--card-bg);
             border-bottom: 1px solid var(--border-color);
-            padding: 10px 40px; /* Reduzido */
+            padding: 3px 30px; /* Mais reduzido */
             position: sticky;
             top: 0;
             z-index: 100;
@@ -66,7 +66,7 @@
         }
 
         header img.logo {
-            width: 150px; /* Reduzido */
+            width: 100px; /* Mais reduzido */
             /* Logo para fundo escuro (Guia V3) */
             content: url('https://raw.githubusercontent.com/Clebito2/layout/main/Logo%20live%20oficial-36.png');
         }
@@ -74,7 +74,7 @@
         /* Adicionado para o título no header */
         header .header-title {
             font-family: var(--font-primary);
-            font-size: 1.1rem; /* 18px */
+            font-size: 0.9rem; /* Reduzido */
             font-weight: 600;
             color: var(--text-muted);
             margin: 0;
